# Delaunay

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.txt  visual.sh
.github/actions/: openGL.yml
.github/actions/OpenGL/: Dockerfile
.github/workflows/: commit-workflow.yml
data/TestData/ClosestPointGolden/: testInfo.txt
data/TestData/ConvexHullGolden/: testInfo.txt
data/TestData/DelaunayGolden/: testInfo.txt
data/TestData/LocateFaceGolden/: testInfo.txt
data/TestData/StarGolden/: testInfo.txt
data/TestData/TriangulationPathGolden/: testInfo.txt
data/TestData/TwoClosestGolden/: testInfo.txt
data/TestData/VoronoiGolden/: testInfo.txt
data/TestData/VoronoiPathGolden/: testInfo.txt
include/: Circle.h  Config.h  Dcel.h  DcelWriter.h  Delaunay.h  Draw.h  Edge.h  Face.h  Gabriel.h  Line.h  Logging.h  Menu.h  Node.h  Point.h  Polygon.h  Process.h  Queue.h  Set.h  Stack.h  Status.h  Text.h  Triangle.h  Triangulation.h  Vertex.h  Voronoi.h  defines.h  generic.h
include/Config/: Config.h  ConfigService.h
include/Dcel/: Dcel.h  DcelFigureBuilder.h  DcelGenerator.h  DcelModel.h  DcelReader.h  Edge.h  Face.h  Vertex.h
include/Figures/: Circle.h  FigureIO.h  Line.h  Point.h  Polygon.h  Polyline.h
include/Figures/Generators/: LineFactory.h  PointFactory.h
include/Gabriel/: Gabriel.h  GabrielIO.h
include/InOut/: FileExtensionChecker.h
include/InOut/Reader/: DcelReader.h  GraphReader.h  PointsReader.h
include/InOut/Writer/: DcelWriter.h  GraphWriter.h  PointsWriter.h
include/Store/: StoreData.h  StoreDataRepository.h  StoreService.h
include/Triangulation/: ConvexHull.h  Delaunay.h  DelaunayIO.h  Graph.h  Node.h  NodeIO.h  StarTriangulation.h  Triangulation.h  TriangulationFactory.h
include/Visual/: Menu.h  Status.h  StatusModel.h  StatusService.h
include/Visual/Display/: DisplayManager.h  DisplayService.h
include/Visual/Display/Displayable/: Displayable.h  DisplayableColor.h  DisplayableConfig.h  DisplayableConfigGenerator.h
include/Voronoi/: Voronoi.h  VoronoiFactory.h  VoronoiIO.h
lib/inc/: TypeDefs.h  delaunayLib.h  figuresLib.h  locateLib.h  pathLib.h  triangulationLib.h
lib/src/: delaunayLib.cpp  figuresLib.cpp  locateLib.cpp  pathLib.cpp  triangulationLib.cpp
performance/: performance.cpp  performance.h
src/: Circle.cpp  Config.cpp  Dcel.cpp  DcelReader.cpp  DcelWriter.cpp  Delaunay.cpp  Draw.cpp  Edge.cpp  Face.cpp  Gabriel.cpp  Graph.cpp  Line.cpp  Logging.cpp  Menu.cpp  Node.cpp  Polygon.cpp  Polyline.cpp  Process.cpp  Triangle.cpp  Triangulation.cpp  Vertex.cpp  Voronoi.cpp  generic.cpp  main.cpp
src/Config/: Config.cpp
src/Dcel/: Dcel.cpp  DcelFigureBuilder.cpp  DcelGenerator.cpp  DcelModel.cpp  DcelReader.cpp  DcelWriter.cpp  Edge.cpp  Face.cpp  Vertex.cpp
src/Figures/: Circle.cpp  FigureIO.cpp  Line.cpp  Polygon.cpp  Polyline.cpp
src/Figures/Generators/: LineFactory.cpp  PointFactory.cpp
src/Gabriel/: Gabriel.cpp  GabrielIO.cpp
src/InOut/: DelaunayIO.cpp  FileExtensionChecker.cpp  VoronoiIO.cpp
src/InOut/Reader/: DcelReader.cpp  GraphReader.cpp  PointsReader.cpp
src/InOut/Writer/: DcelWriter.cpp  GraphWriter.cpp  PointsWriter.cpp
src/Store/: StoreData.cpp  StoreDataRepository.cpp  StoreService.cpp
src/Triangulation/: ConvexHull.cpp  Delaunay.cpp  DelaunayIO.cpp  Graph.cpp  Node.cpp  NodeIO.cpp  StarTriangulation.cpp  TriangulationFactory.cpp
src/Visual/: Menu.cpp  Status.cpp
src/Visual/Display/: DisplayManager.cpp  DisplayService.cpp
src/Visual/Display/Displayable/: Displayable.cpp  DisplayableConfigGenerator.cpp  DisplayableFactory.cpp
src/Voronoi/: Voronoi.cpp  VoronoiFactory.cpp  VoronoiIO.cpp
statistics/: Statistics.cpp  Statistics.h
test/: Label.cpp  Label.h  Parameter.cpp  Parameter.h  TestCircle.cpp  TestDcelRandom.cpp  TestLine.cpp  TestPoint.cpp  TestTriangulationPath_Integration.cpp  TestVertex.cpp  Tester.cpp  Validator.cpp  Validator.h  assert.cpp  assert.h  definesTest.h  test.cpp  test.h  testCompare.cpp  testCompare.h  testConvexHull.cpp  testConvexHull.h  testDcel.cpp  testDcel.h  testDelaunay.cpp  testDelaunay.h  testExecution.cpp  testExecution.h  testFunction.h  testPath.cpp  testPath.h  testSet.cpp  testSet.h  testStarTriangulation.cpp  testStarTriangulation.h  testVoronoi.cpp  testVoronoi.h  tester.cpp  tester.h
test/Api/: TestDelaunay_Api.cpp
test/Equivalence/: TestConvexHull_Equivalence.cpp  TestLocatePoint_Equivalence.cpp
test/Integration/: TestTriangulationPath_Integration.cpp
test/inc/: TestData.h  TestSuite.h  TestSuiteReader.h  Tester.h
test/src/: TestSuite.cpp  TestSuiteReader.cpp
test/src/Api/: TestClosest_Api.cpp  TestConvexHull_Api.cpp  TestDelaunay_Api.cpp  TestLocateFace_Api.cpp  TestStar_Api.cpp  TestTriangulationPath_Api.cpp  TestTwoClosest_Api.cpp  TestVoronoiPath_Api.cpp  TestVoronoi_Api.cpp
test/src/Equivalence/: TestConvexHull_Equivalence.cpp  TestLocatePoint_Equivalence.cpp  TestLocateTwoClosest_Equivalence.cpp
test/src/Fast/: TestDcelRandom.cpp  TestEdge.cpp  TestFace.cpp  TestNode.cpp  TestVertex.cpp
test/src/Integration/: TestTriangulationPath_Integration.cpp
test/src/Profiling/: TestDelaunay_Profiling.cpp
visual/: Draw.cpp  Draw.h  Menu.cpp  Menu.h  Process.cpp  Process.h  Status.cpp  Status.h  main.cpp
visual/Commands/: Command.cpp  Command.h  CommandFactory.cpp  CommandFactory.h  CommandParamFactory.h  CommandParamIn.h  CommandParamOut.h  CommandResult.cpp  CommandResult.h  MenuOption.h
visual/Display/: DisplayManager.cpp  DisplayManager.h  DisplayService.cpp  DisplayService.h
visual/Display/Displayable/: Displayable.cpp  Displayable.h  DisplayableConfigGenerator.cpp  DisplayableFactory.cpp  DisplayableFactory.h
